@@ -1,5 +1,5 @@
 plugindir   = $(pkglibdir)
-plugin_DATA = pubmed.py lyx.py
+plugin_DATA = pubmed.py lyx.py lyx.png
 
 EXTRA_DIST =	\
 	$(plugin_DATA)
