@@ -17,15 +17,32 @@ class BibData;
 class PluginManager
 {
 	public:
-		std::list<Plugin*> getPlugins();
-		std::list<Plugin*> getEnabledPlugins();
-		void scan (std::string const &pluginDir);
 		PluginManager ();
 		~PluginManager ();
+
+		/* List of loaded plugins */
+		std::list<Plugin*> getPlugins();
+
+		/* List of enabled plugins */
+		std::list<Plugin*> getEnabledPlugins();
+
+		/* Load all plugins in the directory */
+		void scan (std::string const &pluginDir);
+
+		/* Look for data files in plugin paths */
+		Glib::ustring findDataFile (Glib::ustring file);
+
 	private:
+		/* Python module search locations */
+		std::vector<Glib::ustring> pythonPaths_;
+
+		/* Loaded python modules */
 		std::list<PythonPlugin> pythonPlugins_;
+
+		/* Builtin plugins */
 		CrossRefPlugin crossref_;
 		ArxivPlugin arxiv_;
+
 };
 
 extern PluginManager *_global_plugins;
