@@ -1,4 +1,5 @@
 1.1.2:
+	- Expand plugin API
 	- Unbreak sorting in list view (Bug 202188)
 1.1.1:
 	- Updated Russian translation (Sergey Kirpichev)
